--- a/src/Welcome.css
+++ b/src/Welcome.css
@@ -1,5 +1,13 @@
 #welcome {
-  padding: 10% 10%;
+  padding: 15% 15%;
   text-align: center;
-  font-size: 20px;
+  font-size: 40px;
+  font-family: 'Karla', sans-serif;
+  text-shadow:
+		-1px -1px 0 #fff,
+		1px -1px 0 #fff,
+		-1px 1px 0 #fff,
+		1px 1px 0 #fff;
+  background-image: url('https://static1.squarespace.com/static/57a638c5ebbd1acee619193b/t/5b5f88baf950b77867e03e81/1529434543262/food+background.png?format=1500w');
+  background-size: cover;
 }
