Changed localhost to heroku

--- a/src/Welcome.css
+++ b/src/Welcome.css
@@ -10,4 +10,5 @@
 		1px 1px 0 #fff;
   background-image: url('https://static1.squarespace.com/static/57a638c5ebbd1acee619193b/t/5b5f88baf950b77867e03e81/1529434543262/food+background.png?format=1500w');
   background-size: cover;
+  height: 100vh
 }
